--- a/event_algotrading.ipynb
+++ b/event_algotrading.ipynb
@@ -38,7 +38,13 @@
     "tags": []
    },
    "source": [
-    "Algo-trading on corporate actions by leveraging NLP. A replicationa and enhancement of the paper: *Trade the Event: Corporate Events Detection for News-Based Event-Driven Trading (Zhou et al., Findings 2021)*."
+    "Algo-trading on corporate actions by leveraging NLP. A replicationa and enhancement of the paper: *Trade the Event: Corporate Events Detection for News-Based Event-Driven Trading (Zhou et al., Findings 2021)*.\n",
+    "\n",
+    "We will perform the following steps:\n",
+    "1. Domain adaptation for financial articles by finetuning a BERT model with Masked Language Model (MLM) training on financial news and encyclopedia data. *Zhou et al.* utilized human annotators to label news articles with an event. \n",
+    "1. Bi-Level Event Detection: At Token-Level we detect events using a sequence labeling approach. At the higher Article-Level we will augment the corpus with 'CLS' token's embedding or the entire article's, and concatenate the lower level tokens.\n",
+    "1. Recognize security Ticker, using string matching algorithm to recognize tickers within articles.\n",
+    "1. Create trading signals on the identified tickers."
    ]
   },
   {
@@ -85,12 +91,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\"\"\"\n",
     "%pip install matplotlib\n",
     "%pip install tensorflow\n",
     "%pip install shutil\n",
     "%pip install yfinance\n",
     "%pip install pyarrow\n",
-    "%pip install tqdm"
+    "%pip install tqdm\n",
+    "%pip install pip install transformers\n",
+    "\"\"\""
    ]
   },
   {
@@ -222,6 +231,168 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a8bb610c",
+   "metadata": {},
+   "source": [
+    "# Wrangling the Data\n",
+    "\n",
+    "Our corpus will be processed and labelled to 11 types of corporate events: \n",
+    "1. Acquisition(A)\n",
+    "1. Clinical Trial(CT)\n",
+    "1. Regular Dividend(RD)\n",
+    "1. Dividend Cut(DC)\n",
+    "1. Dividend Increase(DI)\n",
+    "1. Guidance Increase(GI)\n",
+    "1. New Contract(NC)\n",
+    "1. Reverse Stock Split(RSS)\n",
+    "1. Special Dividend(SD)\n",
+    "1. Stock Repurchase(SR)\n",
+    "1. Stock Split(SS).\n",
+    "1. No event (O)\n",
+    "\n",
+    "Articles are structured as follows:\n",
+    "\n",
+    "```json\n",
+    "'title': 'Title',\n",
+    "'text': 'Text Body',\n",
+    "'pub_time': 'Published datetime',\n",
+    "'labels': {\n",
+    "    'ticker': 'Security symbol',\n",
+    "    'start_time': 'First trade after article published',\n",
+    "    'start_price_open': 'The \"Open\" price at start_time',\n",
+    "    'start_price_close': 'The \"Close\" price at start_time',\n",
+    "    'end_price_nday': 'The \"Close\" price at the last minute of the following 1-3 trading day. If early than 4pm ET its the same day. Otherwise, it refers to the next trading day.', \n",
+    "    'end_time_1-3day': 'The time corresponds to end_price_1day',\n",
+    "    'highest_price_nday': 'The highest price in the following 1-3 trading', \n",
+    "    'highest_time_nday': 'The time corresponds to highest_price_1-3day',\n",
+    "    'lowest_price_nday': 'The lowest price in the following 1-3 trading day',\n",
+    "    'lowest_time_nday': 'The time corresponds to lowest_price_1-3day',\n",
+    "}\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5e6810a9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d1241943",
+   "metadata": {},
+   "source": [
+    "## BERT Classifier\n",
+    "\n",
+    "Built on top of a pretrained BERT (Bidirectional Encoder Representations from Transformers).BERT is an industry tested transformer-based model, pre-trained on a large corpus of text to generate contextual embeddings for input sequences.\n",
+    "\n",
+    "We will use a pre-trained Google BERT-Base Cased: with 12-layers + 768-hidden, 12-heads , and 110M parameters. This is the base model used in *Zhou et al. (2021)*.\n",
+    "\n",
+    "The architecture can be summarized in 3 componets:\n",
+    "1. Input embeddings + attention masks for the preTrained BERT model. Bert applies transformer blocks with self-attention (attention captures language structures). The model outputs embedding sequences (last layer from BERT NxH) and a pooled summary derived from the first 'CLS' token(a 1XH vector).\n",
+    "1. The sequence outputs (NxH vector) is passed through dense layers and dropouts for the first NER classification, this maps the high-DIM outputs to logits. Padding of unknown tokens helps the model focus on the tasks.\n",
+    "1. NER logits are flattened and concatenated with the pooled summaries to form a new feature vector (NxH + H). The vector is passed again through dense and dropout layers to classify the event as one of the 11 identified (O is ignored)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ee8c05e7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tensorflow as tf\n",
+    "from tensorflow.keras.layers import Dropout, Dense\n",
+    "import tensorflow_text as text\n",
+    "from transformers import TFBertModel, BertConfig, BertTokenizerFast\n",
+    "\n",
+    "MODEL_DIR = 'google-bert/bert-base-cased'\n",
+    "MAX_LEN = 256"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "08fa3abf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "class BertForBilevelClassification(TFBertModel):\n",
+    "    def __init__(self, config, *args, **kwargs):\n",
+    "        super().__init__(*args, **kwargs)\n",
+    "        self.num_labels = config.num_labels\n",
+    "        self.max_seq_length = config.max_seq_length\n",
+    "        self.bert = TFBertModel(config)\n",
+    "\n",
+    "        self.final_dropout1 = Dropout(config.hidden_dropout_prob)\n",
+    "        self.final_classifier1 = Dense(2048, input_shape=(config.hidden_size + self.max_seq_length * self.num_labels,))\n",
+    "        self.final_dropout2 = Dropout(config.hidden_dropout_prob)\n",
+    "        self.final_classifier2 = Dense(self.num_labels - 1)\n",
+    "\n",
+    "        self.seq_dropout = Dropout(config.hidden_dropout_prob)\n",
+    "        self.ner_dropout = Dropout(config.hidden_dropout_prob)\n",
+    "\n",
+    "        self.ner_classifier1 = Dense(2048, input_shape=(config.hidden_size,))\n",
+    "        self.ner_classifier2 = Dense(self.num_labels)\n",
+    "        self.dropout1 = Dropout(config.hidden_dropout_prob)\n",
+    "        self.dropout2 = Dropout(config.hidden_dropout_prob)\n",
+    "\n",
+    "    def call(self, input_ids=None, attention_mask=None, token_type_ids=None, position_ids=None, head_mask=None, inputs_embeds=None, seq_labels=None, ner_labels=None, output_attentions=None, output_hidden_states=None, return_dict=None, training=False):\n",
+    "        outputs = self.bert(input_ids,\n",
+    "                            attention_mask=attention_mask,\n",
+    "                            token_type_ids=token_type_ids,\n",
+    "                            position_ids=position_ids,\n",
+    "                            head_mask=head_mask,\n",
+    "                            inputs_embeds=inputs_embeds,\n",
+    "                            output_attentions=output_attentions,\n",
+    "                            output_hidden_states=output_hidden_states,\n",
+    "                            return_dict=return_dict,\n",
+    "                            training=training)\n",
+    "\n",
+    "        sequence_output = self.ner_dropout(outputs[0], training=training)\n",
+    "        ner_logits = self.ner_classifier1(sequence_output)\n",
+    "        ner_logits = self.dropout1(ner_logits, training=training)\n",
+    "        ner_logits = self.ner_classifier2(ner_logits)\n",
+    "\n",
+    "        pad_pred = tf.zeros([self.num_labels], dtype=ner_logits.dtype)\n",
+    "        pad_pred[-1] = 1\n",
+    "        ner_logits = tf.where(tf.broadcast_to(attention_mask[:, :, None], ner_logits.shape) == 0, pad_pred, ner_logits)\n",
+    "\n",
+    "        final_input = tf.reshape(ner_logits, [ner_logits.shape[0], -1])\n",
+    "        final_input = tf.concat([outputs[1], final_input], axis=1)\n",
+    "\n",
+    "        seq_logits = self.final_dropout1(final_input, training=training)\n",
+    "        seq_logits = self.final_classifier1(seq_logits)\n",
+    "        seq_logits = self.final_dropout2(seq_logits, training=training)\n",
+    "        seq_logits = self.final_classifier2(seq_logits)\n",
+    "\n",
+    "        outputs = (ner_logits,) + (seq_logits,) + outputs[2:]\n",
+    "\n",
+    "        if ner_labels is not None:\n",
+    "            loss_fct = tf.keras.losses.SparseCategoricalCrossentropy(from_logits=True)\n",
+    "            ner_loss = loss_fct(ner_labels, ner_logits)\n",
+    "\n",
+    "            seq_loss_fct = tf.keras.losses.BinaryCrossentropy(from_logits=True)\n",
+    "            seq_loss = seq_loss_fct(seq_labels[:, :-1], seq_logits)\n",
+    "            total_loss = ner_loss + seq_loss\n",
+    "            outputs = (total_loss,) + outputs\n",
+    "\n",
+    "        return outputs\n",
+    "\n",
+    "tokenizer = BertTokenizerFast.from_pretrained(MODEL_DIR)\n",
+    "config = BertConfig.from_pretrained(MODEL_DIR)\n",
+    "config.num_labels = 12\n",
+    "config.max_seq_length = MAX_LEN\n",
+    "model = BertForBilevelClassification.from_pretrained(MODEL_DIR, config=config)\n",
+    "model.eval()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "1de1100e",
    "metadata": {
     "id": "pTeb9dL6H0Cu",
@@ -257,7 +428,11 @@
    "source": [
     "## References\n",
     "\n",
-    "- [Zhou, Zhihan, Liqian Ma, and Han Liu. \"Trade the event: Corporate events detection for news-based event-driven trading.\" arXiv preprint arXiv:2105.12825 (2021).](https://aclanthology.org/2021.findings-acl.186)"
+    "- [Zhou, Zhihan, Liqian Ma, and Han Liu. \"Trade the event: Corporate events detection for news-based event-driven trading.\" arXiv preprint arXiv:2105.12825 (2021).](https://aclanthology.org/2021.findings-acl.186)\n",
+    "- [Hugging Face Transformers APIs](https://github.com/huggingface/transformers)\n",
+    "- [Hugging Face Model Repository and Spaces](https://huggingface.co/models)\n",
+    "- [Devlin, Jacob, et al. \"Bert: Pre-training of deep bidirectional transformers for language understanding.\" arXiv preprint arXiv:1810.04805 (2018).](https://arxiv.org/abs/1810.04805)\n",
+    "- [Google Pre-trained BERT Models.](https://github.com/google-research/bert?tab=readme-ov-file)"
    ]
   },
   {
