--- a/event_algotrading.ipynb
+++ b/event_algotrading.ipynb
@@ -42,7 +42,7 @@
     "\n",
     "We will perform the following steps:\n",
     "1. Domain adaptation for financial articles by finetuning a BERT model with Masked Language Model (MLM) training on financial news and encyclopedia data. *Zhou et al.* utilized human annotators to label news articles with an event. \n",
-    "1. Bi-Level Event Detection: At Token-Level we detect events using a sequence labeling approach. At the higher Article-Level we will augment the corpus with 'CLS' token's embedding or the entire article's, and concatenate the lower level tokens.\n",
+    "1. Bi-Level Event Detection: At Token-Level we detect events using a sequence labeling approach. At the higher Article-Level we will augment the corpus with 'CLS' token embedding which contains the the aggregate of all the article's embeddings, and concatenate it with the lower level tokens.\n",
     "1. Recognize security Ticker, using string matching algorithm to recognize tickers within articles.\n",
     "1. Create trading signals on the identified tickers."
    ]
@@ -151,11 +151,11 @@
     "        for filename in filenames:\n",
     "            print(os.path.join(dirname, filename))\n",
     "\n",
-    "    DATA_DIR = \"/kaggle/input/DATASET\"\n",
+    "    DATA_PATH = \"/kaggle/input/DATASET\"\n",
     "    IN_KAGGLE = True\n",
     "else:\n",
     "    IN_KAGGLE = False\n",
-    "    DATA_DIR = \"./data/\""
+    "    DATA_PATH = \"./data/\""
    ]
   },
   {
@@ -274,10 +274,244 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ee8c05e7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tensorflow as tf\n",
+    "from tensorflow.keras.layers import Dropout, Dense\n",
+    "import tensorflow_text as text\n",
+    "from transformers import TFBertModel, BertConfig, BertTokenizerFast, TFBertModel, BertTokenizer, TFBertForTokenClassification, BertConfig, create_optimizer\n",
+    "from sklearn.metrics import classification_report, precision_recall_fscore_support\n",
+    "\n",
+    "MODEL_DIR = 'google-bert/bert-base-cased'\n",
+    "MAX_LEN = 256\n",
+    "SPECIAL_TOKEN = '[CLS]'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e86a7a2f",
+   "metadata": {},
+   "source": [
+    "### Tokenizing News Text\n",
+    "\n",
+    "The text body is tokenized, a simple example is shown below, including how the '[CLS]' token is leveraged.\n",
+    "\n",
+    "Transformers use self-attention mechanisms represent interactions amongst tokens and their contextual information in the input sequence as a weighted-sum. With this mechanism higher layers of the network will aggregate information from all other tokens in the sequence, in our case '[CLS]' will have such information. \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "5e6810a9",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "tokenizer = BertTokenizerFast.from_pretrained(MODEL_DIR)\n",
+    "model = TFBertModel.from_pretrained(MODEL_DIR)\n",
+    "\n",
+    "text = \"Further this conclusion is the fact that cumulative raw returns increase and exceed the market over the same period. When taken as a whole, the evidence suggests Cramer recommends “hot” stocks, lending credence to the Hot Hand Fallacy in this context. \"\n",
+    "\n",
+    "inputs = tokenizer.encode_plus(f\"{SPECIAL_TOKEN} {text}\", return_tensors=\"tf\")\n",
+    "outputs = model(inputs['input_ids'])\n",
+    "hidden_state = outputs.last_hidden_state\n",
+    "embedding = hidden_state[:, 0, :]\n",
+    "\n",
+    "print(f\"Special Token: {SPECIAL_TOKEN} embedding: {embedding}\")\n",
+    "\n",
+    "inputs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pathlib import Path\n",
+    "import re\n",
+    "import pickle\n",
+    "from copy import deepcopy\n",
+    "\n",
+    "def read_wnut(file_path):\n",
+    "    \"\"\"\n",
+    "    Reads a WNUT-format file to extract and separate tokens and their NER tags.\n",
+    "    The WNUT-format expects each token and its corresponding tag to be separated by a tab ('\\t'),\n",
+    "    with each token-tag pair on a new line. Different documents or sentences are separated by\n",
+    "    a blank line.\n",
+    "\n",
+    "    Args:\n",
+    "        file_path (str): The path to the WNUT-format file containing the annotated text.\n",
+    "\n",
+    "    Returns:\n",
+    "        tuple: A tuple containing two lists:\n",
+    "            - token_docs: A list where each element is a list of tokens from a single document/sentence.\n",
+    "            - tag_docs: A list where each element is a list of tags corresponding to the tokens in the `token_docs`.\n",
+    "    \"\"\"\n",
+    "    print(file_path)\n",
+    "    file_path = Path(file_path)\n",
+    "\n",
+    "    raw_text = file_path.read_text().strip()\n",
+    "    raw_docs = re.split(r'\\n\\t?\\n', raw_text)\n",
+    "    token_docs = []\n",
+    "    tag_docs = []\n",
+    "    for doc in raw_docs:\n",
+    "        tokens = []\n",
+    "        tags = []\n",
+    "        for line in doc.split('\\n'):\n",
+    "            token, tag = line.split('\\t')\n",
+    "            tokens.append(token)\n",
+    "            tags.append(tag)\n",
+    "        token_docs.append(tokens)\n",
+    "        tag_docs.append(tags)\n",
+    "\n",
+    "    return token_docs, tag_docs\n",
+    "\n",
+    "def encode_tags(tags, encodings, tag2id):\n",
+    "    \"\"\"\n",
+    "    Aligns NER tags with the tokenized input for models employing subword tokenization, such as BERT, that requires adjusting the original word-level tags to match the tokenized structure.\n",
+    "    Note the ignore value (-100, from  PyTorch's CrossEntropyLoss) used for tokens that should not be directly associated with a tag from the original dataset, such as special tokens added during tokenization ([CLS], [SEP], [PAD]).\n",
+    "\n",
+    "    Args:\n",
+    "        tags (list of list of str): The original list of tag sequences for each document.\n",
+    "        encodings (transformers.BatchEncoding): The tokenized input data with `offset_mapping` included.\n",
+    "        tag2id (dict): A mapping from tag names to unique integer IDs.\n",
+    "\n",
+    "    Returns:\n",
+    "        list of list of int: A list of adjusted label sequences for each document, aligned with the tokenized input.\n",
+    "    \"\"\"\n",
+    "    labels = [[tag2id[tag] for tag in doc] for doc in tags]\n",
+    "    encoded_labels = []\n",
+    "    for doc_labels, doc_offset in zip(labels, encodings.offset_mapping):\n",
+    "        doc_enc_labels = np.ones(len(doc_offset), dtype=int) * -100\n",
+    "        arr_offset = np.array(doc_offset)\n",
+    "        max_len = len(doc_enc_labels[(arr_offset[:, 0] == 0) & (arr_offset[:, 1] != 0)])\n",
+    "        doc_enc_labels[(arr_offset[:, 0] == 0) & (arr_offset[:, 1] != 0)] = doc_labels[:max_len]\n",
+    "        encoded_labels.append(doc_enc_labels.tolist())\n",
+    "\n",
+    "    return encoded_labels\n",
+    "\n",
+    "def load_and_cache_dataset(path=DATA_PATH, model=MODEL_DIR, max_len=MAX_LEN, num_labels=12, cache=True):\n",
+    "    \"\"\"\n",
+    "    Preprocesses and caches the NER dataset for training with a BERT model.\n",
+    "\n",
+    "    Loads training and testing data withs sentences and their corresponding NER tags. It consolidates all unique NER tags from both datasets into a tag2id dictionary, mapping each tag to a unique integer, and its inverse id2tag.\n",
+    "    Computes sequence-level labels for both datasets, where each sequence is represented by a binary label vector indicating the presence of specific tags and Tokenizes and encodes the text data, adjusting for BERT's subword tokenization and removing offset mappings as they're not used in model training.\n",
+    "\n",
+    "    NER tags are adjusted to align with the tokenizer's output, transforming them into a numerical format suitable for training.\n",
+    "    Args:\n",
+    "        path (str): Path to the dataset directory.\n",
+    "        model (str): Directory of the pretrained BERT model to use for tokenization.\n",
+    "        max_len (int): Maximum sequence length for tokenization.\n",
+    "        num_labels (int): Number of unique labels in the dataset.\n",
+    "        cache (bool): Caches output, defaults to True.\n",
+    "\n",
+    "    Returns:\n",
+    "        Tuple: Processed training and testing encodings, sequence labels, and NER labels.\n",
+    "    \"\"\"\n",
+    "    def generate_sequence_labels(tags_list, tag2id, num_labels):\n",
+    "        \"\"\"\n",
+    "        Generates sequence labels for a list of tag sequences.\n",
+    "\n",
+    "        Args:\n",
+    "            tags_list (list of list of str): List of tag sequences.\n",
+    "            tag2id (dict): Mapping from tag names to unique integer IDs.\n",
+    "            num_labels (int): Number of unique labels in the dataset.\n",
+    "\n",
+    "        Returns:\n",
+    "            list of list of int: Sequence labels for each tag sequence.\n",
+    "        \"\"\"\n",
+    "        seq_labels = []\n",
+    "        for tags in tags_list:\n",
+    "            tag_set = set(tags)\n",
+    "            current_label = np.zeros([num_labels])\n",
+    "            if len(tag_set) == 1:\n",
+    "                current_label[tag2id['O']] = 1\n",
+    "            else:\n",
+    "                tag_set.discard('O')\n",
+    "                for tag in tag_set:\n",
+    "                    current_label[tag2id[tag]] = 1\n",
+    "            seq_labels.append(list(current_label))\n",
+    "        return seq_labels\n",
+    "\n",
+    "    cache_file = os.path.join(path, f'cached_train_test_{max_len}.pkl')\n",
+    "\n",
+    "    if cache and os.path.exists(cache_file):\n",
+    "        print(\"Loading dataset from cache\")\n",
+    "        with open(cache_file, 'rb') as f:\n",
+    "            train_encodings, train_seq_labels, train_ner_labels, test_encodings, test_seq_labels, test_ner_labels = pickle.load(f)\n",
+    "\n",
+    "        return train_encodings, train_seq_labels, train_ner_labels, test_encodings, test_seq_labels, test_ner_labels\n",
+    "\n",
+    "    tokenizer = BertTokenizerFast.from_pretrained(model)\n",
+    "    train_ner_texts, train_ner_tags = read_wnut(os.path.join(path, 'Event_detection/train.txt'))\n",
+    "    test_ner_texts, test_ner_tags = read_wnut(os.path.join(path, 'Event_detection/dev.txt'))\n",
+    "    tags = deepcopy(train_ner_tags)\n",
+    "    tags.extend(test_ner_tags)\n",
+    "\n",
+    "    unique_tags = list(set(tag for doc in train_ner_tags for tag in doc))\n",
+    "    tag2id = {tag: id for id, tag in enumerate(sorted(unique_tags))}\n",
+    "    print(f\"Tags to identify: {tag2id}\")\n",
+    "    id2tag = {id: tag for tag, id in tag2id.items()}\n",
+    "\n",
+    "    train_seq_labels = []\n",
+    "    test_seq_labels = []\n",
+    "    train_seq_labels = generate_sequence_labels(train_ner_tags, tag2id, num_labels)\n",
+    "    test_seq_labels = generate_sequence_labels(test_ner_tags, tag2id, num_labels)\n",
+    "\n",
+    "    train_encodings = tokenizer(train_ner_texts,\n",
+    "                                is_split_into_words=True,\n",
+    "                                return_offsets_mapping=True,\n",
+    "                                padding='max_length',\n",
+    "                                truncation=True,\n",
+    "                                max_length=max_len)\n",
+    "    test_encodings = tokenizer(test_ner_texts,\n",
+    "                            is_split_into_words=True,\n",
+    "                            return_offsets_mapping=True,\n",
+    "                            padding='max_length',\n",
+    "                            truncation=True,\n",
+    "                            max_length=max_len)\n",
+    "\n",
+    "    train_ner_labels = encode_tags(train_ner_tags, train_encodings, tag2id)\n",
+    "    test_ner_labels = encode_tags(test_ner_tags, test_encodings, tag2id)\n",
+    "    train_encodings.pop(\"offset_mapping\")\n",
+    "    test_encodings.pop(\"offset_mapping\")\n",
+    "    if cache:\n",
+    "        data_to_save = (\n",
+    "        train_encodings, train_seq_labels, train_ner_labels, test_encodings, test_seq_labels, test_ner_labels)\n",
+    "        with open(cache_file, 'wb') as f:\n",
+    "            pickle.dump(data_to_save, f)\n",
+    "\n",
+    "    return train_encodings, train_seq_labels, train_ner_labels, test_encodings, test_seq_labels, test_ner_labels\n",
+    "\n",
+    "train_encodings, train_seq_labels, train_ner_labels, test_encodings, test_seq_labels, test_ner_labels =  load_and_cache_dataset(DATA_PATH)\n",
+    "\n",
+    "train_ner_labels"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1732d4f6",
+   "metadata": {},
+   "source": [
+    "### Attention is all you Need\n",
+    "\n",
+    "Vaswani et. al seminal paper *Attention is All You Need*, made self-attention and transformers mainstream.\n",
+    "\n",
+    "Self-attention, calculates the relevance of each word in a sentence to every other word. This is done through queries (Q=XW^Q), keys (K=XW^K), and values (V=XW^V) transformed by a learned weight matrix (W) from the input embeddings (X). The attention score between two words is computed by taking the dot product of their queries and keys, followed by a softmax:\n",
+    "\n",
+    "$ \\text{A}(Q, K, V) = \\text{softmax}\\left(\\frac{QK^T}{\\sqrt{d_k}}\\right)V $\n",
+    "\n",
+    "Where:\n",
+    "- Q represents the queries matrix of current items,\n",
+    "- K represents the keys matrix of items to compare against in the input sequence,\n",
+    "- V represents the values matrix, which are the dot product comparisons between Q and K,\n",
+    "- d_k represents the dimension of the keys and queries,\n",
+    "- A are the Attention wieghts.\n",
+    "\n",
+    "In addition, the word embeddings will contain contextual information (dot poduct of A and V), represented as position added to the embedding. This plus the attention wieghts, captures dependencies and relationships."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -299,34 +533,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee8c05e7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import tensorflow as tf\n",
-    "from tensorflow.keras.layers import Dropout, Dense\n",
-    "import tensorflow_text as text\n",
-    "from transformers import TFBertModel, BertConfig, BertTokenizerFast\n",
-    "\n",
-    "MODEL_DIR = 'google-bert/bert-base-cased'\n",
-    "MAX_LEN = 256"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "08fa3abf",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
-    "class BertForBilevelClassification(TFBertModel):\n",
+    "class BertForBilevelClassification(tf.keras.Model):\n",
     "    def __init__(self, config, *args, **kwargs):\n",
-    "        super().__init__(*args, **kwargs)\n",
+    "        super(BertForBilevelClassification, self).__init__(*args, **kwargs)\n",
     "        self.num_labels = config.num_labels\n",
     "        self.max_seq_length = config.max_seq_length\n",
+    "\n",
     "        self.bert = TFBertModel(config)\n",
+    "\n",
     "\n",
     "        self.final_dropout1 = Dropout(config.hidden_dropout_prob)\n",
     "        self.final_classifier1 = Dense(2048, input_shape=(config.hidden_size + self.max_seq_length * self.num_labels,))\n",
@@ -383,12 +601,27 @@
     "\n",
     "        return outputs\n",
     "\n",
-    "tokenizer = BertTokenizerFast.from_pretrained(MODEL_DIR)\n",
     "config = BertConfig.from_pretrained(MODEL_DIR)\n",
     "config.num_labels = 12\n",
     "config.max_seq_length = MAX_LEN\n",
-    "model = BertForBilevelClassification.from_pretrained(MODEL_DIR, config=config)\n",
-    "model.eval()"
+    "\n",
+    "# Initialize your custom model\n",
+    "model = BertForBilevelClassification(config)\n",
+    "\n",
+    "dummy_input = {'input_ids': tf.keras.Input(shape=(config.max_seq_length,), dtype='int32'),\n",
+    "               'attention_mask': tf.keras.Input(shape=(config.max_seq_length,), dtype='int32')}\n",
+    "\n",
+    "# Build model by calling it on dummy input\n",
+    "_ = model(dummy_input)\n",
+    "\n",
+    "\n",
+    "# Manually load the weights from a pre-trained BERT model, if needed\n",
+    "bert_model = TFBertModel.from_pretrained(MODEL_DIR)\n",
+    "model.bert.set_weights(bert_model.get_weights())\n",
+    "\n",
+    "# Now you can compile, fit, or evaluate your model\n",
+    "model.compile(optimizer='adam', loss='categorical_crossentropy', metrics=['accuracy'])\n",
+    "model.summary()"
    ]
   },
   {
@@ -432,7 +665,8 @@
     "- [Hugging Face Transformers APIs](https://github.com/huggingface/transformers)\n",
     "- [Hugging Face Model Repository and Spaces](https://huggingface.co/models)\n",
     "- [Devlin, Jacob, et al. \"Bert: Pre-training of deep bidirectional transformers for language understanding.\" arXiv preprint arXiv:1810.04805 (2018).](https://arxiv.org/abs/1810.04805)\n",
-    "- [Google Pre-trained BERT Models.](https://github.com/google-research/bert?tab=readme-ov-file)"
+    "- [Google Pre-trained BERT Models.](https://github.com/google-research/bert?tab=readme-ov-file)\n",
+    "- [Ashish Vaswani and Noam Shazeer and Niki Parmar and Jakob Uszkoreit and Llion Jones and Aidan N. Gomez and Lukasz Kaiser and Illia Polosukhin, \"Attention is All You Need\". NIPS (2017)](https://research.google/pubs/attention-is-all-you-need/)"
    ]
   },
   {
