--- a/event_algotrading.ipynb
+++ b/event_algotrading.ipynb
@@ -198,13 +198,14 @@
     "import yfinance as yf\n",
     "import pandas as pd\n",
     "\n",
-    "import matplotlib.pyplot as plt\n",
-    "import matplotlib.dates as mdates\n",
-    "\n",
-    "from datetime import datetime\n",
-    "import tensorflow as tf\n",
+    "from pathlib import Path\n",
+    "import re\n",
+    "import pickle\n",
+    "from copy import deepcopy\n",
     "\n",
     "from tqdm import tqdm\n",
+    "\n",
+    "import tensorflow as tf\n",
     "\n",
     "if ('COLAB_TPU_ADDR' in os.environ and IN_COLAB) or (IN_KAGGLE and 'TPU_ACCELERATOR_TYPE' in os.environ):\n",
     "    tpu = tf.distribute.cluster_resolver.TPUClusterResolver()\n",
@@ -279,13 +280,9 @@
    "outputs": [],
    "source": [
     "import tensorflow as tf\n",
+    "from tensorflow.keras.losses import SparseCategoricalCrossentropy, BinaryCrossentropy\n",
     "from tensorflow.keras.layers import Input, Dense, Dropout\n",
     "from tensorflow.keras.optimizers import Adam\n",
-    "from pathlib import Path\n",
-    "import re\n",
-    "import pickle\n",
-    "from copy import deepcopy\n",
-    "\n",
     "from transformers import TFBertModel, BertConfig, BertTokenizerFast, TFBertModel, BertTokenizer, TFBertForTokenClassification, BertConfig, create_optimizer\n",
     "from sklearn.metrics import classification_report, precision_recall_fscore_support\n",
     "\n",
@@ -393,7 +390,7 @@
     "\n",
     "    return encoded_labels\n",
     "\n",
-    "def load_and_cache_dataset(path=DATA_PATH, model=MODEL_DIR, max_len=MAX_LEN, num_labels=12, cache=True):\n",
+    "def load_and_cache_dataset(path=DATA_PATH, model=MODEL_DIR, max_len=MAX_LEN, num_labels=NUM_LABELS, cache=True):\n",
     "    \"\"\"\n",
     "    Preprocesses and caches the NER dataset for training with a BERT model.\n",
     "\n",
@@ -424,7 +421,7 @@
     "            list of list of int: Sequence labels for each tag sequence.\n",
     "        \"\"\"\n",
     "        seq_labels = []\n",
-    "        for tags in tags_list:\n",
+    "        for tags in tqdm(tags_list, desc=\"generate_sequence_labels\"):\n",
     "            tag_set = set(tags)\n",
     "            current_label = np.zeros([num_labels])\n",
     "            if len(tag_set) == 1:\n",
@@ -445,7 +442,7 @@
     "\n",
     "        return train_encodings, train_seq_labels, train_ner_labels, test_encodings, test_seq_labels, test_ner_labels\n",
     "\n",
-    "    tokenizer = BertTokenizer.from_pretrained(model)\n",
+    "    tokenizer = BertTokenizerFast.from_pretrained(model)\n",
     "    train_ner_texts, train_ner_tags = read_wnut(os.path.join(path, 'Event_detection/train.txt'))\n",
     "    test_ner_texts, test_ner_tags = read_wnut(os.path.join(path, 'Event_detection/dev.txt'))\n",
     "    tags = deepcopy(train_ner_tags)\n",
@@ -486,7 +483,22 @@
     "\n",
     "    return train_encodings, train_seq_labels, train_ner_labels, test_encodings, test_seq_labels, test_ner_labels\n",
     "\n",
-    "train_encodings, train_seq_labels, train_ner_labels, test_encodings, test_seq_labels, test_ner_labels =  load_and_cache_dataset(DATA_PATH)"
+    "train_encodings, train_seq_labels, train_ner_labels, test_encodings, test_seq_labels, test_ner_labels =  load_and_cache_dataset(DATA_PATH)\n",
+    "\n",
+    "input_ids = np.array(train_encodings['input_ids'])\n",
+    "attention_mask = np.array(train_encodings['attention_mask'])\n",
+    "token_type_ids = np.array(train_encodings['token_type_ids']) if 'token_type_ids' in train_encodings else None\n",
+    "labels = np.array(train_seq_labels)\n",
+    "ner = np.array(train_ner_labels)\n",
+    "print(\"input_ids shape:\", input_ids.shape)\n",
+    "print(\"attention_mask shape:\", attention_mask.shape)\n",
+    "if token_type_ids is not None:\n",
+    "    print(\"token_type_ids shape:\", token_type_ids.shape)\n",
+    "else:\n",
+    "    print(\"token_type_ids not present\")\n",
+    "\n",
+    "print(\"seq_labels shape:\", labels.shape)\n",
+    "print(\"ner_labels shape:\", ner.shape)"
    ]
   },
   {
@@ -531,129 +543,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "08fa3abf",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/3\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "Exception encountered when calling BertForBilevelClassification.call().\n\n\u001b[1mShapes used to initialize variables must be fully-defined (no `None` dimensions). Received: shape=(None, 2048) for variable path='bert_for_bilevel_classification_11/dense_52/kernel'\u001b[0m\n\nArguments received by BertForBilevelClassification.call():\n  • inputs={'input_ids': 'tf.Tensor(shape=(None, 256), dtype=int64)', 'attention_mask': 'tf.Tensor(shape=(None, 256), dtype=int64)', 'token_type_ids': 'tf.Tensor(shape=(None, 256), dtype=int64)'}\n  • training=True",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[22], line 120\u001b[0m\n\u001b[1;32m    117\u001b[0m optimizer \u001b[38;5;241m=\u001b[39m Adam(learning_rate\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m5e-5\u001b[39m)\n\u001b[1;32m    118\u001b[0m model\u001b[38;5;241m.\u001b[39mcompile(optimizer\u001b[38;5;241m=\u001b[39moptimizer,\n\u001b[1;32m    119\u001b[0m               loss\u001b[38;5;241m=\u001b[39m{\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mner_logits\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;124m'\u001b[39m\u001b[38;5;124msparse_categorical_crossentropy\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mseq_logits\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mbinary_crossentropy\u001b[39m\u001b[38;5;124m'\u001b[39m}, metrics\u001b[38;5;241m=\u001b[39m{\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mner_logits\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;124m'\u001b[39m\u001b[38;5;124maccuracy\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mseq_logits\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;124m'\u001b[39m\u001b[38;5;124maccuracy\u001b[39m\u001b[38;5;124m'\u001b[39m})\n\u001b[0;32m--> 120\u001b[0m \u001b[43mmodel\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfit\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtrain_dataset\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mepochs\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m3\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m    121\u001b[0m model\u001b[38;5;241m.\u001b[39msummary()\n",
-      "File \u001b[0;32m~/miniconda3/envs/quant/lib/python3.11/site-packages/keras/src/utils/traceback_utils.py:122\u001b[0m, in \u001b[0;36mfilter_traceback.<locals>.error_handler\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m    119\u001b[0m     filtered_tb \u001b[38;5;241m=\u001b[39m _process_traceback_frames(e\u001b[38;5;241m.\u001b[39m__traceback__)\n\u001b[1;32m    120\u001b[0m     \u001b[38;5;66;03m# To get the full stack trace, call:\u001b[39;00m\n\u001b[1;32m    121\u001b[0m     \u001b[38;5;66;03m# `keras.config.disable_traceback_filtering()`\u001b[39;00m\n\u001b[0;32m--> 122\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m e\u001b[38;5;241m.\u001b[39mwith_traceback(filtered_tb) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m    123\u001b[0m \u001b[38;5;28;01mfinally\u001b[39;00m:\n\u001b[1;32m    124\u001b[0m     \u001b[38;5;28;01mdel\u001b[39;00m filtered_tb\n",
-      "Cell \u001b[0;32mIn[22], line 59\u001b[0m, in \u001b[0;36mBertForBilevelClassification.call\u001b[0;34m(self, inputs, training)\u001b[0m\n\u001b[1;32m     55\u001b[0m final_input \u001b[38;5;241m=\u001b[39m tf\u001b[38;5;241m.\u001b[39mconcat([outputs[\u001b[38;5;241m1\u001b[39m], final_input], axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m)\n\u001b[1;32m     57\u001b[0m seq_logits \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfinal_dropout1(final_input, training\u001b[38;5;241m=\u001b[39mtraining)\n\u001b[0;32m---> 59\u001b[0m seq_logits \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfinal_classifier1\u001b[49m\u001b[43m(\u001b[49m\u001b[43mseq_logits\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     60\u001b[0m seq_logits \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfinal_dropout2(seq_logits, training\u001b[38;5;241m=\u001b[39mtraining)\n\u001b[1;32m     61\u001b[0m seq_logits \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfinal_classifier2(seq_logits)\n",
-      "\u001b[0;31mValueError\u001b[0m: Exception encountered when calling BertForBilevelClassification.call().\n\n\u001b[1mShapes used to initialize variables must be fully-defined (no `None` dimensions). Received: shape=(None, 2048) for variable path='bert_for_bilevel_classification_11/dense_52/kernel'\u001b[0m\n\nArguments received by BertForBilevelClassification.call():\n  • inputs={'input_ids': 'tf.Tensor(shape=(None, 256), dtype=int64)', 'attention_mask': 'tf.Tensor(shape=(None, 256), dtype=int64)', 'token_type_ids': 'tf.Tensor(shape=(None, 256), dtype=int64)'}\n  • training=True"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "class BertForBilevelClassification(tf.keras.Model):\n",
-    "    \"\"\"\n",
-    "    Utilizes the BERT model to extract rich contextual embeddings from input sequences.\n",
-    "\n",
-    "    It extends BERT for specific tasks by adding custom layers for NER and sequence classification and contextual embeddings. The BERT model processes input sequences to produce a sequence of token embeddings and a pooled output.\n",
-    "    Two sets of dense layers are added on top of the BERT model to handle two different tasks:\n",
-    "    NER Classification: Predicts NER tags for each token in the sequence.\n",
-    "    Sequence Classification: Makes a prediction for the entire sequence.\n",
-    "    \"\"\"\n",
-    "    def __init__(self, config, max_seq_length,*args, **kwargs):\n",
-    "        super(BertForBilevelClassification, self).__init__(*args, **kwargs)\n",
+    "class TFBertForBilevelClassification(tf.keras.Model):\n",
+    "    def __init__(self, config, max_seq_length, *args, **kwargs):\n",
+    "        super().__init__()\n",
     "        self.num_labels = config.num_labels\n",
     "        self.max_seq_length = max_seq_length\n",
+    "\n",
     "        self.bert = TFBertModel(config)\n",
     "\n",
-    "        self.final_dropout1 = Dropout(config.hidden_dropout_prob)\n",
-    "        self.final_classifier1 = Dense(2048, input_shape=(config.hidden_size + self.max_seq_length * self.num_labels,))\n",
-    "        self.final_dropout2 = Dropout(config.hidden_dropout_prob)\n",
-    "        self.final_classifier2 = Dense(self.num_labels - 1)\n",
+    "        self.ner_dropout = tf.keras.layers.Dropout(config.hidden_dropout_prob)\n",
+    "        self.ner_classifier1 = tf.keras.layers.Dense(2048, activation='relu')\n",
+    "        self.ner_classifier2 = tf.keras.layers.Dense(self.num_labels, activation='softmax')  # Assuming softmax for classification\n",
     "\n",
-    "        self.seq_dropout = Dropout(config.hidden_dropout_prob)\n",
-    "        self.ner_dropout = Dropout(config.hidden_dropout_prob)\n",
+    "        self.final_dropout1 = tf.keras.layers.Dropout(config.hidden_dropout_prob)\n",
+    "        self.final_classifier1 = tf.keras.layers.Dense(2048, activation='relu')\n",
+    "        self.final_dropout2 = tf.keras.layers.Dropout(config.hidden_dropout_prob)\n",
+    "        self.final_classifier2 = tf.keras.layers.Dense(self.num_labels - 1, activation='sigmoid')  # Assuming binary classification\n",
     "\n",
-    "\n",
-    "        self.ner_classifier1 = Dense(2048, input_shape=(config.hidden_size,))\n",
-    "        self.ner_classifier2 = Dense(self.num_labels)\n",
-    "        self.dropout1 = Dropout(config.hidden_dropout_prob)\n",
-    "        self.dropout2 = Dropout(config.hidden_dropout_prob)\n",
+    "        self.seq_dropout = tf.keras.layers.Dropout(config.hidden_dropout_prob)\n",
+    "        self.dropout1 = tf.keras.layers.Dropout(config.hidden_dropout_prob)\n",
+    "        self.dropout2 = tf.keras.layers.Dropout(config.hidden_dropout_prob)\n",
     "\n",
     "    def call(self, inputs, training=False):\n",
-    "        \"\"\"\n",
-    "        Forward Pass similar to the standard BERT model inputs.\n",
-    "        The sequence output is passed through NER-specific layers to predict tags for each token, with an additional step to masks the logits for tokens that are padded, ensuring they do not affect the loss calculation.\n",
-    "\n",
-    "        For training instances where NER and sequence labels are provided, it calculates: NER loss using SparseCategoricalCrossentropy.\n",
-    "        Sequence classification loss using BinaryCrossentropy. The total loss is the sum of both.\n",
-    "\n",
-    "        Arguments:\n",
-    "        input_ids\n",
-    "        attention_mask\n",
-    "\n",
-    "        returns the BERT pooled output with reshaped NER logits, feeding them into the sequence classification layers to make a prediction for the entire sequence.\n",
-    "        \"\"\"\n",
     "        input_ids, attention_mask, token_type_ids = inputs['input_ids'], inputs['attention_mask'], inputs['token_type_ids']\n",
-    "        outputs = self.bert(input_ids, attention_mask=attention_mask, token_type_ids=token_type_ids, training=training)\n",
-    "        sequence_output = self.ner_dropout(outputs[0], training=training)\n",
+    "        bert_outputs = self.bert(input_ids, attention_mask=attention_mask, token_type_ids=token_type_ids)\n",
+    "        sequence_output = bert_outputs[0]\n",
+    "        pooled_output = bert_outputs[1]\n",
+    "\n",
+    "        sequence_output = self.ner_dropout(sequence_output, training=training)\n",
     "        ner_logits = self.ner_classifier1(sequence_output)\n",
     "        ner_logits = self.dropout1(ner_logits, training=training)\n",
     "        ner_logits = self.ner_classifier2(ner_logits)\n",
     "\n",
-    "        mask = tf.cast(attention_mask, dtype=ner_logits.dtype)[:, :, tf.newaxis]\n",
-    "        ner_logits = tf.where(mask == 0, -1e9 * tf.ones_like(ner_logits), ner_logits)\n",
-    "\n",
-    "        final_input = tf.reshape(ner_logits, [tf.shape(ner_logits)[0], -1])\n",
-    "        final_input = tf.concat([outputs[1], final_input], axis=1)\n",
+    "        # Assuming you want to reshape and concatenate like in PyTorch model\n",
+    "        ner_logits_flat = tf.reshape(ner_logits, [tf.shape(ner_logits)[1] , tf.shape(ner_logits)[2]])\n",
+    "        final_input = tf.concat([pooled_output, ner_logits_flat], axis=1)\n",
     "\n",
     "        seq_logits = self.final_dropout1(final_input, training=training)\n",
-    "\n",
     "        seq_logits = self.final_classifier1(seq_logits)\n",
     "        seq_logits = self.final_dropout2(seq_logits, training=training)\n",
     "        seq_logits = self.final_classifier2(seq_logits)\n",
     "\n",
-    "        outputs = (ner_logits,) + (seq_logits,) + outputs[2:]\n",
-    "        return outputs\n",
+    "        return ner_logits, seq_logits\n",
     "\n",
-    "    def _train_step(self, data):\n",
-    "        inputs = data[0]\n",
-    "        labels = data[1]\n",
+    "\n",
+    "    def custom_ner_loss(self, ner_logits, ner_labels, attention_mask):\n",
+    "        ner_loss_fct = SparseCategoricalCrossentropy(from_logits=True, reduction=tf.keras.losses.Reduction.NONE)\n",
+    "        ner_logits_flat = tf.reshape(ner_logits, [-1, self.num_labels])\n",
+    "        ner_labels_flat = tf.reshape(ner_labels, [-1])\n",
+    "        attention_mask_flat = tf.reshape(attention_mask, [-1])\n",
+    "        active_loss = tf.where(tf.equal(attention_mask_flat, 1), tf.ones_like(ner_labels_flat), tf.zeros_like(ner_labels_flat))\n",
+    "        ner_loss = ner_loss_fct(ner_labels_flat, ner_logits_flat) * tf.cast(active_loss, dtype=tf.float32)\n",
+    "        return tf.reduce_sum(ner_loss) / tf.reduce_sum(tf.cast(active_loss, dtype=tf.float32))\n",
+    "\n",
+    "    def custom_seq_loss(self, seq_logits, seq_labels):\n",
+    "        seq_labels_modified = seq_labels[:, :-1]\n",
+    "        seq_loss_fct = BinaryCrossentropy(from_logits=True)\n",
+    "        seq_loss = seq_loss_fct(seq_labels_modified, seq_logits)\n",
+    "\n",
+    "        return seq_loss\n",
+    "\n",
+    "    def train_step(self, data):\n",
+    "        inputs, labels = data\n",
     "        with tf.GradientTape() as tape:\n",
-    "            ner_logits, seq_logits = self(inputs, training=True)  # Forward pass\n",
+    "            ner_logits, seq_logits = self(inputs, training=True)\n",
+    "            ner_loss = self.custom_ner_loss(ner_logits, labels['ner_labels'], inputs['attention_mask'])\n",
+    "            seq_loss = self.custom_seq_loss(seq_logits, labels['seq_labels'])\n",
+    "            total_loss = ner_loss + seq_loss\n",
     "\n",
-    "            # Initialize loss = 0\n",
-    "            total_loss = 0\n",
+    "        gradients = tape.gradient(total_loss, self.trainable_variables)\n",
+    "        self.optimizer.apply_gradients(zip(gradients, self.trainable_variables))\n",
     "\n",
-    "            # Calculate NER loss if ner_labels are provided\n",
-    "            if labels['ner_labels'] is not None:\n",
-    "                loss_fct = tf.keras.losses.SparseCategoricalCrossentropy(from_logits=True)\n",
-    "                ner_loss = loss_fct(labels['ner_labels'], ner_logits)\n",
-    "                total_loss += ner_loss\n",
-    "\n",
-    "            # Calculate sequence labeling loss if seq_labels are provided\n",
-    "            if labels['seq_labels'] is not None:\n",
-    "                seq_loss_fct = tf.keras.losses.BinaryCrossentropy(from_logits=True)\n",
-    "                seq_loss = seq_loss_fct(labels['seq_labels'], seq_logits)\n",
-    "                total_loss += seq_loss\n",
-    "\n",
-    "            # Calculate gradients and apply them\n",
-    "            gradients = tape.gradient(total_loss, self.trainable_variables)\n",
-    "            self.optimizer.apply_gradients(zip(gradients, self.trainable_variables))\n",
-    "\n",
-    "        # Return a dict mapping metrics to their current value\n",
-    "        return {\"loss\": total_loss}\n",
-    "\n",
+    "        return {'loss': total_loss, 'ner_loss': ner_loss, 'seq_loss': seq_loss}\n",
     "\n",
     "config = BertConfig.from_pretrained(MODEL_DIR)\n",
     "config.num_labels = NUM_LABELS\n",
-    "model = BertForBilevelClassification(config, MAX_LEN)\n",
+    "model = TFBertForBilevelClassification(config, MAX_LEN)\n",
     "\n",
     "input_ids = np.array(train_encodings['input_ids'])\n",
     "attention_mask = np.array(train_encodings['attention_mask'])\n",
@@ -674,8 +644,7 @@
     "train_dataset = train_dataset.shuffle(buffer_size=10000).batch(32)\n",
     "\n",
     "optimizer = Adam(learning_rate=5e-5)\n",
-    "model.compile(optimizer=optimizer,\n",
-    "              loss={'ner_logits': 'sparse_categorical_crossentropy', 'seq_logits': 'binary_crossentropy'}, metrics={'ner_logits': 'accuracy', 'seq_logits': 'accuracy'})\n",
+    "model.compile(optimizer=optimizer)\n",
     "model.fit(train_dataset, epochs=3)\n",
     "model.summary()"
    ]
