--- a/event_algotrading.ipynb
+++ b/event_algotrading.ipynb
@@ -86,10 +86,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "7cae6fcf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\n%pip install matplotlib\\n%pip install tensorflow\\n%pip install shutil\\n%pip install yfinance\\n%pip install pyarrow\\n%pip install tqdm\\n%pip install pip install transformers\\n'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "%pip install matplotlib\n",
@@ -104,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "6e1a7dc0",
    "metadata": {
     "execution": {
@@ -160,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "1015516d",
    "metadata": {
     "execution": {
@@ -190,7 +201,45 @@
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-04-08 09:29:46.852679: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2024-04-08 09:29:48.373853: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running on CPU\n",
+      "Number of accelerators: 1\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-04-08 09:29:49.884544: I external/local_xla/xla/stream_executor/cuda/cuda_executor.cc:984] could not open file to read NUMA node: /sys/bus/pci/devices/0000:01:00.0/numa_node\n",
+      "Your kernel may have been built without NUMA support.\n",
+      "2024-04-08 09:29:50.001688: W tensorflow/core/common_runtime/gpu/gpu_device.cc:2251] Cannot dlopen some GPU libraries. Please make sure the missing libraries mentioned above are installed properly if you would like to use GPU. Follow the guide at https://www.tensorflow.org/install/gpu for how to download and setup the required libraries for your platform.\n",
+      "Skipping registering GPU devices...\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'/mnt/c/Users/adamd/workspace/news-based-event-driven_algotrading'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import math\n",
@@ -274,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "ee8c05e7",
    "metadata": {},
    "outputs": [],
@@ -309,10 +358,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "5e6810a9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of the PyTorch model were not used when initializing the TF 2.0 model TFBertModel: ['cls.predictions.transform.LayerNorm.bias', 'cls.predictions.bias', 'cls.predictions.transform.dense.bias', 'cls.seq_relationship.weight', 'cls.predictions.transform.dense.weight', 'cls.predictions.transform.LayerNorm.weight', 'cls.seq_relationship.bias']\n",
+      "- This IS expected if you are initializing TFBertModel from a PyTorch model trained on another task or with another architecture (e.g. initializing a TFBertForSequenceClassification model from a BertForPreTraining model).\n",
+      "- This IS NOT expected if you are initializing TFBertModel from a PyTorch model that you expect to be exactly identical (e.g. initializing a TFBertForSequenceClassification model from a BertForSequenceClassification model).\n",
+      "All the weights of TFBertModel were initialized from the PyTorch model.\n",
+      "If your task is similar to the task the model of the checkpoint was trained on, you can already use TFBertModel for predictions without further training.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'input_ids': <tf.Tensor: shape=(1, 60), dtype=int32, numpy=\n",
+       "array([[  101,   101,   164,   112,  6940,  1142,  6593,  1110,  1103,\n",
+       "         1864,  1115, 27574,  7158,  5166,  2773,  1105, 13908,  1103,\n",
+       "         2319,  1166,  1103,  1269,  1669,   119,  1332,  1678,  1112,\n",
+       "          170,  2006,   117,  1103,  2554,  5401,   140,  4515,  1200,\n",
+       "        18029,  1116,   789,  2633,   790, 17901,   117, 21363,   172,\n",
+       "         4359,  7008,  1106,  1103,  4126,  9918,  6760, 15347,  1107,\n",
+       "         1142,  5618,   119,   112,   166,   102]], dtype=int32)>, 'token_type_ids': <tf.Tensor: shape=(1, 60), dtype=int32, numpy=\n",
+       "array([[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "        0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "        0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]], dtype=int32)>, 'attention_mask': <tf.Tensor: shape=(1, 60), dtype=int32, numpy=\n",
+       "array([[1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "        1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1,\n",
+       "        1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]], dtype=int32)>}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "tokenizer = BertTokenizer.from_pretrained(MODEL_DIR)\n",
     "model = TFBertModel.from_pretrained(MODEL_DIR)\n",
@@ -329,9 +413,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading dataset from cache\n",
+      "input_ids shape: (7770, 256)\n",
+      "attention_mask shape: (7770, 256)\n",
+      "token_type_ids shape: (7770, 256)\n",
+      "seq_labels shape: (7770, 12)\n",
+      "ner_labels shape: (7770, 256)\n"
+     ]
+    }
+   ],
    "source": [
     "def read_wnut(file_path):\n",
     "    \"\"\"\n",
@@ -543,10 +640,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "08fa3abf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/3\n",
+      "\u001b[1m 47/243\u001b[0m \u001b[32m━━━\u001b[0m\u001b[37m━━━━━━━━━━━━━━━━━\u001b[0m \u001b[1m44:56\u001b[0m 14s/step - loss: 1.9000 - ner_loss: 1.7346 - seq_loss: 0.1653"
+     ]
+    }
+   ],
    "source": [
     "class TFBertForBilevelClassification(tf.keras.Model):\n",
     "    def __init__(self, config, max_seq_length, *args, **kwargs):\n",
@@ -572,16 +678,21 @@
     "    def call(self, inputs, training=False):\n",
     "        input_ids, attention_mask, token_type_ids = inputs['input_ids'], inputs['attention_mask'], inputs['token_type_ids']\n",
     "        bert_outputs = self.bert(input_ids, attention_mask=attention_mask, token_type_ids=token_type_ids)\n",
-    "        sequence_output = bert_outputs[0]\n",
-    "        pooled_output = bert_outputs[1]\n",
+    "        sequence_output = bert_outputs['last_hidden_state']\n",
+    "        pooled_output = bert_outputs['pooler_output']\n",
     "\n",
     "        sequence_output = self.ner_dropout(sequence_output, training=training)\n",
     "        ner_logits = self.ner_classifier1(sequence_output)\n",
     "        ner_logits = self.dropout1(ner_logits, training=training)\n",
     "        ner_logits = self.ner_classifier2(ner_logits)\n",
     "\n",
-    "        # Assuming you want to reshape and concatenate like in PyTorch model\n",
-    "        ner_logits_flat = tf.reshape(ner_logits, [tf.shape(ner_logits)[1] , tf.shape(ner_logits)[2]])\n",
+    "        pad_pred = tf.zeros((self.num_labels,), dtype=ner_logits.dtype)\n",
+    "        pad_pred = tf.tensor_scatter_nd_update(pad_pred, [[self.num_labels - 1]], [1])\n",
+    "        pad_pred = tf.expand_dims(pad_pred, 0)  # Expanding dimensions to match ner_logits for broadcasting.\n",
+    "        mask_expanded = tf.expand_dims(attention_mask, -1)\n",
+    "        ner_logits = tf.where(tf.equal(mask_expanded, 0), pad_pred, ner_logits)\n",
+    "\n",
+    "        ner_logits_flat = tf.reshape(ner_logits, [-1, self.max_seq_length * self.num_labels ])\n",
     "        final_input = tf.concat([pooled_output, ner_logits_flat], axis=1)\n",
     "\n",
     "        seq_logits = self.final_dropout1(final_input, training=training)\n",
@@ -593,13 +704,19 @@
     "\n",
     "\n",
     "    def custom_ner_loss(self, ner_logits, ner_labels, attention_mask):\n",
-    "        ner_loss_fct = SparseCategoricalCrossentropy(from_logits=True, reduction=tf.keras.losses.Reduction.NONE)\n",
+    "        ner_loss_fct = tf.keras.losses.SparseCategoricalCrossentropy(from_logits=True, reduction=tf.keras.losses.Reduction.NONE)\n",
     "        ner_logits_flat = tf.reshape(ner_logits, [-1, self.num_labels])\n",
     "        ner_labels_flat = tf.reshape(ner_labels, [-1])\n",
     "        attention_mask_flat = tf.reshape(attention_mask, [-1])\n",
-    "        active_loss = tf.where(tf.equal(attention_mask_flat, 1), tf.ones_like(ner_labels_flat), tf.zeros_like(ner_labels_flat))\n",
-    "        ner_loss = ner_loss_fct(ner_labels_flat, ner_logits_flat) * tf.cast(active_loss, dtype=tf.float32)\n",
-    "        return tf.reduce_sum(ner_loss) / tf.reduce_sum(tf.cast(active_loss, dtype=tf.float32))\n",
+    "\n",
+    "        ignore_mask = tf.not_equal(ner_labels_flat, -100)\n",
+    "        active_loss = tf.where(tf.equal(attention_mask_flat, 1), ignore_mask, tf.zeros_like(ignore_mask, dtype=tf.bool))\n",
+    "        ner_labels_filtered = tf.boolean_mask(ner_labels_flat, active_loss)\n",
+    "        ner_logits_filtered = tf.boolean_mask(ner_logits_flat, active_loss)\n",
+    "\n",
+    "        ner_loss = ner_loss_fct(ner_labels_filtered, ner_logits_filtered)\n",
+    "\n",
+    "        return tf.reduce_sum(ner_loss) / tf.cast(tf.reduce_sum(tf.cast(active_loss, dtype=tf.float32)), tf.float32)\n",
     "\n",
     "    def custom_seq_loss(self, seq_logits, seq_labels):\n",
     "        seq_labels_modified = seq_labels[:, :-1]\n",
