--- a/event_algotrading.ipynb
+++ b/event_algotrading.ipynb
@@ -15,7 +15,7 @@
     "tags": []
    },
    "source": [
-    "# Trading News and Corporate Actions with NLP\n",
+    "# Trading News and Corporate Actions with BERT\n",
     "\n",
     "<a href=\"\" target=\"_blank\"><img align=\"left\" alt=\"Kaggle\" title=\"Open in Kaggle\" src=\"https://kaggle.com/static/images/open-in-kaggle.svg\"></a>\n",
     "\n",
@@ -162,7 +162,7 @@
     "        for filename in filenames:\n",
     "            print(os.path.join(dirname, filename))\n",
     "\n",
-    "    DATA_PATH = \"/kaggle/input/DATASET\"\n",
+    "    DATA_PATH = \"/kaggle/input/USCorpActionNews\"\n",
     "    IN_KAGGLE = True\n",
     "else:\n",
     "    IN_KAGGLE = False\n",
@@ -649,7 +649,7 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/3\n",
-      "\u001b[1m 47/243\u001b[0m \u001b[32m━━━\u001b[0m\u001b[37m━━━━━━━━━━━━━━━━━\u001b[0m \u001b[1m44:56\u001b[0m 14s/step - loss: 1.9000 - ner_loss: 1.7346 - seq_loss: 0.1653"
+      "\u001b[1m106/243\u001b[0m \u001b[32m━━━━━━━━\u001b[0m\u001b[37m━━━━━━━━━━━━\u001b[0m \u001b[1m31:02\u001b[0m 14s/step - loss: 1.8343 - ner_loss: 1.7019 - seq_loss: 0.1324"
      ]
     }
    ],
