--- a/event_algotrading.ipynb
+++ b/event_algotrading.ipynb
@@ -83,17 +83,17 @@
     "UPGRADE_PY = False\n",
     "INSTALL_DEPS = False\n",
     "if INSTALL_DEPS:\n",
-    "  # !pip install -q tensorboard==2.15.2\n",
-    "  # !pip install -q tensorflow[and-cuda]==2.15.1\n",
-    "  # !pip install -q tensorflow==2.15.0\n",
-    "  # !pip install -q tensorflow-io-gcs-filesystem==0.36.0\n",
-    "  # !pip install -q tensorflow-text==2.15.0\n",
-    "  # !pip install -q tf_keras==2.15.1\n",
-    "  # !pip install -q tokenizers==0.15.2\n",
-    "  # !pip install -q torch==2.2.0+cpu\n",
-    "  # !pip install -q torch-xla==2.2.0+libtpu\n",
-    "  # !pip install -q torchdata==0.7.1\n",
-    "  !pip install -q transformers==4.38.2\n",
+    "  # %pip install -q tensorboard==2.15.2\n",
+    "  # %pip install -q tensorflow[and-cuda]==2.15.1\n",
+    "  # %pip install -q tensorflow==2.15.0\n",
+    "  # %pip install -q tensorflow-io-gcs-filesystem==0.36.0\n",
+    "  # %pip install -q tensorflow-text==2.15.0\n",
+    "  # %pip install -q tf_keras==2.15.1\n",
+    "  # %pip install -q tokenizers==0.15.2\n",
+    "  # %pip install -q torch==2.2.0+cpu\n",
+    "  # %pip install -q torch-xla==2.2.0+libtpu\n",
+    "  # %pip install -q torchdata==0.7.1\n",
+    "  %pip install -q transformers==4.38.2\n",
     "\n",
     "if UPGRADE_PY:\n",
     "  !mamba create -n py311 -y\n",
@@ -133,6 +133,8 @@
     "!export CUDA_LAUNCH_BLOCKING=1\n",
     "!export XLA_FLAGS=--xla_cpu_verbose=0\n",
     "\n",
+    "MODEL_PATH = \"google-bert/bert-base-cased\"\n",
+    "MODEL_PATH_TOKENIZER = \"google-bert/bert-base-cased\"\n",
     "try:\n",
     "  # https://www.tensorflow.org/install/pip#windows-wsl2\n",
     "  import google.colab\n",
@@ -149,14 +151,14 @@
     "        for filename in filenames:\n",
     "            print(os.path.join(dirname, filename))\n",
     "    DATA_PATH = \"/kaggle/input\"\n",
+    "    MODEL_PATH = \"/kaggle/input/bert-base-cased-fine-tuned-on-investopedia/tensorflow2/investopedia/1\"\n",
     "    IN_KAGGLE = True\n",
     "    print('Kaggle!')\n",
     "elif not IN_COLAB and not IN_KAGGLE:\n",
     "    IN_KAGGLE = False\n",
     "    DATA_PATH = \"./data/\"\n",
     "    print('Normal!')\n",
-    "\n",
-    "MODEL_PATH = \"google-bert/bert-base-cased\""
+    "    MODEL_PATH = \"./models\"\n"
    ]
   },
   {
@@ -342,7 +344,7 @@
     "from transformers import BertTokenizerFast, TFBertModel, BertConfig\n",
     "\n",
     "# https://huggingface.co/transformers/v3.0.2/model_doc/bert.html#berttokenizerfast\n",
-    "tokenizer = BertTokenizerFast.from_pretrained(MODEL_PATH)\n",
+    "tokenizer = BertTokenizerFast.from_pretrained(MODEL_PATH_TOKENIZER)\n",
     "model = TFBertModel.from_pretrained(MODEL_PATH)\n",
     "\n",
     "text = [\"When taken as a whole, the evidence suggests Cramer recommends “hot” stocks\", \"lending credence to the Hot Hand Fallacy in this context.\"]\n",
@@ -607,10 +609,10 @@
     "\n",
     "def load_and_cache_dataset(train_ner_texts, train_ner_tags,\n",
     "                           test_ner_texts, test_ner_tags,\n",
-    "                           bert_model=MODEL_PATH,\n",
+    "                           bert_model_tok=MODEL_PATH_TOKENIZER,\n",
     "                           max_len=MAX_LEN,\n",
     "                           num_labels=NUM_LABELS):\n",
-    "    tokenizer = BertTokenizerFast.from_pretrained(bert_model)\n",
+    "    tokenizer = BertTokenizerFast.from_pretrained(bert_model_tok)\n",
     "\n",
     "    tags = deepcopy(train_ner_tags)\n",
     "    tags.extend(test_ner_tags)\n",
@@ -958,6 +960,7 @@
     "                            return_dict=True)\n",
     "    bert_output = tf.cast(bert_output[0], tf.float32 )\n",
     "\n",
+    "    # Zero Logits that are paddings or special characters.\n",
     "    mask = tf.cast(attention_mask, tf.float32 )\n",
     "    mask = tf.expand_dims(mask, -1)\n",
     "    masked_output = bert_output * mask\n",
