--- a/event_algotrading.ipynb
+++ b/event_algotrading.ipynb
@@ -141,6 +141,7 @@
     "  from google.colab import drive\n",
     "  drive.mount('/content/drive')\n",
     "  DATA_PATH = \"/content/drive/MyDrive/EDT dataset\"\n",
+    "  DATA_PATH = \"/content/drive/MyDrive/investopediaBERT\"\n",
     "  IN_COLAB = True\n",
     "  print('Colab!')\n",
     "except:\n",
@@ -150,7 +151,7 @@
     "    for dirname, _, filenames in os.walk('/kaggle/input'):\n",
     "        for filename in filenames:\n",
     "            print(os.path.join(dirname, filename))\n",
-    "    DATA_PATH = \"/kaggle/input\"\n",
+    "    DATA_PATH = \"/kaggle/input/uscorpactionnews\"\n",
     "    MODEL_PATH = \"/kaggle/input/bert-base-cased-fine-tuned-on-investopedia/tensorflow2/investopedia/1\"\n",
     "    IN_KAGGLE = True\n",
     "    print('Kaggle!')\n",
@@ -295,14 +296,6 @@
    },
    "outputs": [],
    "source": [
-    "MAX_LEN = 256 # Default 256, MAX 512\n",
-    "LEARN_RATE=5e-5 # 5e-5\n",
-    "LR_FACTOR=0.1\n",
-    "LR_MINDELTA=1e-4\n",
-    "EPOCHS=100\n",
-    "PATIENCE=10\n",
-    "BATCH_SIZE = 8 * strategy.num_replicas_in_sync # Default 8\n",
-    "\n",
     "NUM_LABELS = 12 # See Labels description above.\n",
     "SPECIAL_TOKEN = '[CLS]' # Use for classification and hidden state placeholder.\n",
     "UNK_ID = -100 # Unknown token, ignored by loss\n",
@@ -376,6 +369,7 @@
    },
    "outputs": [],
    "source": [
+    "MAX_LEN = 256 # Default 256, MAX 512\n",
     "sample_inputs = inputs = tokenizer.encode_plus(\n",
     "    text,\n",
     "    add_special_tokens=True,  # Add '[CLS]' and '[SEP]'\n",
@@ -853,6 +847,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "LEARN_RATE=5e-5 # 5e-5\n",
+    "LR_FACTOR=0.1\n",
+    "LR_MINDELTA=1e-4\n",
+    "EPOCHS=100\n",
+    "PATIENCE=10\n",
+    "BATCH_SIZE = 8 * strategy.num_replicas_in_sync # Default 8"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "id": "wjuSPNTkMU-o"
    },
@@ -874,12 +882,14 @@
     "    def __init__(self, from_logits=False,\n",
     "                 name='masked_weighted_sparse_categorical_crossentropy',\n",
     "                 class_weight=None,\n",
+    "                 labels_len=MAX_LEN,\n",
     "                 null_class=UNK_ID,\n",
     "                 focal_gamma=None):\n",
     "        super().__init__(name=name)\n",
     "        self.from_logits = from_logits\n",
     "        self.null_class = tf.cast(null_class, tf.float32)\n",
     "        self.class_weight = None\n",
+    "        self.labels_len = labels_len\n",
     "        if class_weight is not None:\n",
     "            class_weights_list = [class_weight[i] for i in sorted(class_weight)]\n",
     "            self.class_weight = tf.convert_to_tensor(class_weights_list, dtype=tf.dtypes.float32)\n",
@@ -889,7 +899,7 @@
     "        # Mask to exclude any class greater than null_class or invalid class entries to 0\n",
     "        y_true = tf.cast(y_true, tf.float32)\n",
     "\n",
-    "        mask = tf.logical_and(tf.greater_equal(y_true, 0), tf.less(y_true, self.null_class))\n",
+    "        mask = tf.logical_and(tf.greater_equal(y_true, 0), tf.less(y_true, self.labels_len - 1))\n",
     "        y_true_masked = tf.where(mask, y_true, tf.zeros_like(y_true))\n",
     "        y_true_masked = tf.cast(y_true_masked, tf.float32)\n",
     "        if tf.executing_eagerly():\n",
@@ -1026,7 +1036,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "colab": {
      "background_save": true,
@@ -1035,7 +1045,15 @@
     "id": "_JsVDcDfo1VP",
     "outputId": "16ea1f0a-c859-44dd-9d46-8c9a38acad8a"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "479/972 [=============>................] - ETA: 10:32 - loss: 0.1712 - sparse_categorical_accuracy: 0.7058"
+     ]
+    }
+   ],
    "source": [
     "with strategy.scope():\n",
     "    train_dataset, test_dataset = get_tf_datasets(train_encodings, test_encodings)\n",
