--- a/event_algotrading.ipynb
+++ b/event_algotrading.ipynb
@@ -883,15 +883,12 @@
     "        self.labels_len = labels_len\n",
     "\n",
     "    def update_state(self, y_true, y_pred, sample_weight=None):\n",
-    "        tf.print(\"MultilabelBinaryAccuracy\")\n",
     "        mask = tf.logical_and(tf.greater_equal(y_true, 0), tf.less(y_true, self.labels_len - 1))\n",
     "        y_true_masked = tf.where(mask, y_true, tf.zeros_like(y_true))\n",
-    "        y_true_masked = tf.cast(y_true_masked, tf.float32)\n",
+    "        y_true_masked = tf.cast(y_true, tf.float32)\n",
     "\n",
     "        y_pred = tf.cast(tf.greater_equal(y_pred, 0.5), tf.float32)\n",
     "        matches = tf.cast(tf.equal(y_true_masked, y_pred), tf.float32)\n",
-    "        matches *= tf.cast(mask, tf.float32)\n",
-    "\n",
     "        if sample_weight is not None:\n",
     "            matches = tf.multiply(matches, tf.cast(sample_weight, tf.float32))\n",
     "\n",
@@ -899,7 +896,6 @@
     "        self.total_predictions.assign_add(tf.cast(tf.size(matches, out_type=tf.int32), tf.float32))\n",
     "\n",
     "    def result(self):\n",
-    "        tf.print(\"MultilabelBinaryAccuracy 1\")\n",
     "        return tf.cast(self.correct_predictions / self.total_predictions, tf.float32)\n",
     "\n",
     "    def reset_states(self):\n",
@@ -924,17 +920,14 @@
     "        self.focal_gamma = focal_gamma\n",
     "\n",
     "    def call(self, y_true, y_pred):\n",
-    "        tf.print(\"MaskedWeightedMultiClassBCE\")\n",
-    "\n",
     "        y_true = tf.cast(y_true, tf.float32)\n",
     "        mask = tf.logical_and(tf.greater_equal(y_true, 0), tf.less(y_true, self.labels_len - 1))\n",
     "        y_true_masked = tf.where(mask, y_true, tf.zeros_like(y_true))\n",
     "        y_true_masked = tf.cast(y_true_masked, tf.float32)\n",
     "\n",
-    "\n",
     "        loss_fn = BinaryCrossentropy(from_logits=False, reduction=tf.keras.losses.Reduction.NONE)\n",
     "        loss = loss_fn(y_true, y_pred)\n",
-    "        loss = loss * tf.cast(mask, tf.float32)\n",
+    "\n",
     "        return tf.reduce_mean(loss)\n",
     "\n",
     "# https://www.tensorflow.org/api_docs/python/tf/keras/losses/CategoricalFocalCrossentropy\n",
@@ -956,17 +949,11 @@
     "        self.focal_gamma = focal_gamma\n",
     "\n",
     "    def call(self, y_true, y_pred):\n",
-    "        tf.print(\"MaskedWeightedSCCE\")\n",
-    "\n",
-    "        # Mask to exclude any class greater than null_class or invalid class entries to 0\n",
     "        y_true = tf.cast(y_true, tf.float32)\n",
-    "\n",
     "        mask = tf.logical_and(tf.greater_equal(y_true, 0), tf.less(y_true, self.labels_len - 1))\n",
     "        y_true_masked = tf.where(mask, y_true, tf.zeros_like(y_true))\n",
     "        y_true_masked = tf.cast(y_true_masked, tf.float32)\n",
     "        if tf.executing_eagerly():\n",
-    "            # tf.print(mask)\n",
-    "            # tf.print(y_true)\n",
     "            tf.debugging.assert_greater(tf.reduce_sum(tf.cast(mask, tf.int32)),\n",
     "                                        0, message=\"All data are masked!\")\n",
     "\n",
@@ -988,8 +975,6 @@
     "            if self.class_weight is not None:\n",
     "                loss *= tf.gather(self.class_weight, tf.cast(y_true_masked, tf.int32))\n",
     "            if tf.executing_eagerly():\n",
-    "                # tf.print(p_t)\n",
-    "                # tf.print(focal_modulation)\n",
     "                tf.debugging.assert_all_finite(focal_modulation, \"Focal contains NaN or Inf\")\n",
     "        else:\n",
     "          # We remove wieghts from focal loss as we zero the UNK class (ln(0)).\n",
@@ -999,17 +984,14 @@
     "                                                 else None)\n",
     "        loss = tf.cast(loss, tf.float32)\n",
     "        loss *=  tf.cast(mask, tf.float32)\n",
-    "\n",
     "        # Avoid div by 0.\n",
     "        sum_mask = tf.reduce_sum(tf.cast(mask, tf.float32))\n",
     "        if tf.executing_eagerly():\n",
-    "            # tf.print(sum_mask)\n",
     "            tf.debugging.assert_positive(sum_mask, message=\"sum_mask zeroed.\")\n",
     "        loss = (tf.reduce_sum(loss) / sum_mask\n",
     "                      if sum_mask > 0.\n",
     "                      else tf.constant(0., dtype=tf.float32))\n",
     "        if tf.executing_eagerly():\n",
-    "            # tf.print(loss)\n",
     "            tf.debugging.assert_positive(loss, message=\"Loss masked to zero.\")\n",
     "\n",
     "        return loss\n",
